// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartSessionForm render should render 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header start_session"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Start Somebody Else
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_type"
                errors="[]"
                expressions=""
                name="type"
                namekey="description"
                searchable="true"
                valuekey="type"
                values="[{\\"type\\":\\"start_session\\",\\"name\\":\\"Start Somebody Else\\",\\"description\\":\\"Start somebody else in a flow\\",\\"localizeableKeys\\":[\\"exits\\"],\\"visibility\\":[\\"messaging\\",\\"messaging_background\\",\\"voice\\"]}]"
              />
            </div>
          </div>
        </div>
        <div>
          <div
            class="ele"
          >
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_start_type"
                errors="[]"
                expressions=""
                name="Start Type"
                namekey="name"
                valuekey="value"
                values="[{\\"name\\":\\"Select recipients manually\\",\\"value\\":\\"assets\\"}]"
              />
            </div>
          </div>
        </div>
        <p />
        <div>
          <div
            data-testid="recipients"
          >
            <div
              class="ele"
            >
              <div
                class="normal "
              >
                <temba-select
                  cachekey="0"
                  data-testid="temba_select_recipients"
                  errors="[]"
                  expressions="session"
                  multi="true"
                  name="Recipients"
                  namekey="name"
                  placeholder="Select who should be started in the flow"
                  queryparam="search"
                  searchable="true"
                  valuekey="uuid"
                  values="[{\\"id\\":\\"2dc85899-0577-4f1b-a620-f12094e34b5e\\",\\"name\\":\\"Cat Fanciers\\",\\"type\\":\\"group\\"},{\\"id\\":\\"42ebf1d0-a43e-4ba6-9577-c863b20c88c4\\",\\"name\\":\\"Norbert Kwizera\\",\\"type\\":\\"contact\\",\\"missing\\":false},{\\"id\\":\\"70ac6ea6-803a-4c33-81c7-dc26803c313f\\",\\"name\\":\\"Rowan Seymour\\",\\"type\\":\\"contact\\",\\"missing\\":false}]"
                />
              </div>
            </div>
            <p />
          </div>
          <div
            class="ele"
          >
            <div
              class="normal "
            >
              <temba-select
                cachekey="0"
                data-testid="temba_select_flow"
                errors="[]"
                expressions=""
                name="Flow"
                namekey="name"
                placeholder="Select the flow to start"
                searchable="true"
                valuekey="uuid"
                values="[{\\"uuid\\":\\"flow_uuid\\",\\"name\\":\\"Flow to Start\\"}]"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`StartSessionForm render should render an empty form with no action 1`] = `
Object {
  "contactQuery": Object {
    "value": "",
  },
  "flow": Object {
    "value": null,
  },
  "recipients": Object {
    "value": Array [],
  },
  "startType": Object {
    "value": Object {
      "name": "Select recipients manually",
      "value": "assets",
    },
  },
  "valid": false,
}
`;

exports[`StartSessionForm render should render an empty form with no action 2`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="start_session"
  title="Start Somebody Else"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Start somebody else in a flow",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
        ],
        "name": "Start Somebody Else",
        "type": "start_session",
        "visibility": Array [
          "messaging",
          "messaging_background",
          "voice",
        ],
      }
    }
    onChange={[MockFunction]}
  />
  <div>
    <SelectElement
      entry={
        Object {
          "value": Object {
            "name": "Select recipients manually",
            "value": "assets",
          },
        }
      }
      key="start_type_select"
      name="Start Type"
      onChange={[Function]}
      options={
        Array [
          Object {
            "name": "Select recipients manually",
            "value": "assets",
          },
          Object {
            "name": "Select recipients from a query",
            "value": "contact_query",
          },
          Object {
            "name": "Create a new contact",
            "value": "create_contact",
          },
        ]
      }
    />
  </div>
  <p />
  <div>
    <div
      data-testid="recipients"
    >
      <AssetSelector
        assets={
          Object {
            "items": Object {},
            "type": "contact",
          }
        }
        entry={
          Object {
            "value": Array [],
          }
        }
        expressions={true}
        multi={true}
        name="Recipients"
        onChange={[Function]}
        placeholder="Select who should be started in the flow"
        searchable={true}
      />
      <p />
    </div>
    <AssetSelector
      assets={
        Object {
          "items": Object {},
          "type": "flow",
        }
      }
      entry={
        Object {
          "value": null,
        }
      }
      name="Flow"
      onChange={[Function]}
      placeholder="Select the flow to start"
      searchable={true}
    />
  </div>
</Dialog>
`;

exports[`StartSessionForm render should render contact query 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header start_session"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Start Somebody Else
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_type"
                errors="[]"
                expressions=""
                name="type"
                namekey="description"
                searchable="true"
                valuekey="type"
                values="[{\\"type\\":\\"start_session\\",\\"name\\":\\"Start Somebody Else\\",\\"description\\":\\"Start somebody else in a flow\\",\\"localizeableKeys\\":[\\"exits\\"],\\"visibility\\":[\\"messaging\\",\\"messaging_background\\",\\"voice\\"]}]"
              />
            </div>
          </div>
        </div>
        <div>
          <div
            class="ele"
          >
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_start_type"
                errors="[]"
                expressions=""
                name="Start Type"
                namekey="name"
                valuekey="value"
                values="[{\\"name\\":\\"Select recipients from a query\\",\\"value\\":\\"contact_query\\"}]"
              />
            </div>
          </div>
        </div>
        <p />
        <div>
          <div
            data-testid="contact_query"
          >
            <div
              class="ele"
            >
              <div
                class="wrapper normal"
              >
                <input
                  data-testid="Contact Query"
                  name="Contact Query"
                  placeholder="household_id = @fields.household_id"
                  value="my_field > 6"
                />
              </div>
            </div>
            <p />
          </div>
          <div
            class="ele"
          >
            <div
              class="normal "
            >
              <temba-select
                cachekey="0"
                data-testid="temba_select_flow"
                errors="[]"
                expressions=""
                name="Flow"
                namekey="name"
                placeholder="Select the flow to start"
                searchable="true"
                valuekey="uuid"
                values="[{\\"uuid\\":\\"flow_uuid\\",\\"name\\":\\"Flow to Start\\"}]"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`StartSessionForm render should render contact query 2`] = `
Array [
  Object {
    "contact_query": "my_field > 6",
    "contacts": Array [],
    "create_contact": false,
    "flow": Object {
      "name": "Flow to Start",
      "uuid": "flow_uuid",
    },
    "groups": Array [],
    "legacy_vars": Array [],
    "type": "start_session",
    "uuid": "c5722340-f7e1-4d99-ac5e-3a6e59845111",
  },
]
`;

exports[`StartSessionForm render should render create new contacts 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header start_session"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Start Somebody Else
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_type"
                errors="[]"
                expressions=""
                name="type"
                namekey="description"
                searchable="true"
                valuekey="type"
                values="[{\\"type\\":\\"start_session\\",\\"name\\":\\"Start Somebody Else\\",\\"description\\":\\"Start somebody else in a flow\\",\\"localizeableKeys\\":[\\"exits\\"],\\"visibility\\":[\\"messaging\\",\\"messaging_background\\",\\"voice\\"]}]"
              />
            </div>
          </div>
        </div>
        <div>
          <div
            class="ele"
          >
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_start_type"
                errors="[]"
                expressions=""
                name="Start Type"
                namekey="name"
                valuekey="value"
                values="[{\\"name\\":\\"Create a new contact\\",\\"value\\":\\"create_contact\\"}]"
              />
            </div>
          </div>
        </div>
        <p />
        <div>
          <div
            class="ele"
          >
            <div
              class="normal "
            >
              <temba-select
                cachekey="0"
                data-testid="temba_select_flow"
                errors="[]"
                expressions=""
                name="Flow"
                namekey="name"
                placeholder="Select the flow to start"
                searchable="true"
                valuekey="uuid"
                values="[{\\"uuid\\":\\"flow_uuid\\",\\"name\\":\\"Flow to Start\\"}]"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`StartSessionForm render should render self, children with base props 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="start_session"
  title="Start Somebody Else"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Start somebody else in a flow",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
        ],
        "name": "Start Somebody Else",
        "type": "start_session",
        "visibility": Array [
          "messaging",
          "messaging_background",
          "voice",
        ],
      }
    }
    onChange={[MockFunction]}
  />
  <div>
    <SelectElement
      entry={
        Object {
          "value": Object {
            "name": "Select recipients manually",
            "value": "assets",
          },
        }
      }
      key="start_type_select"
      name="Start Type"
      onChange={[Function]}
      options={
        Array [
          Object {
            "name": "Select recipients manually",
            "value": "assets",
          },
          Object {
            "name": "Select recipients from a query",
            "value": "contact_query",
          },
          Object {
            "name": "Create a new contact",
            "value": "create_contact",
          },
        ]
      }
    />
  </div>
  <p />
  <div>
    <div
      data-testid="recipients"
    >
      <AssetSelector
        assets={
          Object {
            "items": Object {},
            "type": "contact",
          }
        }
        entry={
          Object {
            "value": Array [
              Object {
                "id": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
                "name": "Cat Fanciers",
                "type": "group",
              },
              Object {
                "id": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
                "missing": false,
                "name": "Norbert Kwizera",
                "type": "contact",
              },
              Object {
                "id": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
                "missing": false,
                "name": "Rowan Seymour",
                "type": "contact",
              },
            ],
          }
        }
        expressions={true}
        multi={true}
        name="Recipients"
        onChange={[Function]}
        placeholder="Select who should be started in the flow"
        searchable={true}
      />
      <p />
    </div>
    <AssetSelector
      assets={
        Object {
          "items": Object {},
          "type": "flow",
        }
      }
      entry={
        Object {
          "value": Object {
            "name": "Flow to Start",
            "uuid": "flow_uuid",
          },
        }
      }
      name="Flow"
      onChange={[Function]}
      placeholder="Select the flow to start"
      searchable={true}
    />
  </div>
</Dialog>
`;

exports[`StartSessionForm render should warn about invalid fields in contact queries 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header start_session"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Start Somebody Else
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_type"
                errors="[]"
                expressions=""
                name="type"
                namekey="description"
                searchable="true"
                valuekey="type"
                values="[{\\"type\\":\\"start_session\\",\\"name\\":\\"Start Somebody Else\\",\\"description\\":\\"Start somebody else in a flow\\",\\"localizeableKeys\\":[\\"exits\\"],\\"visibility\\":[\\"messaging\\",\\"messaging_background\\",\\"voice\\"]}]"
              />
            </div>
          </div>
        </div>
        <div>
          <div
            class="ele"
          >
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_start_type"
                errors="[]"
                expressions=""
                name="Start Type"
                namekey="name"
                valuekey="value"
                values="[{\\"name\\":\\"Select recipients from a query\\",\\"value\\":\\"contact_query\\"}]"
              />
            </div>
          </div>
        </div>
        <p />
        <div>
          <div
            data-testid="contact_query"
          >
            <div
              class="ele"
            >
              <div
                class="wrapper normal"
              >
                <input
                  data-testid="Contact Query"
                  name="Contact Query"
                  placeholder="household_id = @fields.household_id"
                  value="@fields.arst = 34"
                />
              </div>
            </div>
            <p />
          </div>
          <div
            class="ele"
          >
            <div
              class="normal "
            >
              <temba-select
                cachekey="0"
                data-testid="temba_select_flow"
                errors="[]"
                expressions=""
                name="Flow"
                namekey="name"
                placeholder="Select the flow to start"
                searchable="true"
                valuekey="uuid"
                values="[{\\"uuid\\":\\"flow_uuid\\",\\"name\\":\\"Flow to Start\\"}]"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`StartSessionForm updates should allow switching from router 1`] = `
Array [
  Object {
    "contacts": Array [],
    "create_contact": false,
    "flow": Object {
      "name": "My Flow",
      "uuid": undefined,
    },
    "groups": Array [],
    "legacy_vars": Array [],
    "type": "start_session",
    "uuid": "c99dcf07-2ad6-4730-9e99-810a39f5a58d",
  },
]
`;

exports[`StartSessionForm updates should save changes 1`] = `
Object {
  "contactQuery": Object {
    "value": "",
  },
  "flow": Object {
    "validationFailures": Array [],
    "value": Object {
      "id": "my_flow",
      "name": "My Flow",
      "type": "flow",
    },
  },
  "recipients": Object {
    "validationFailures": Array [],
    "value": Array [
      Object {
        "name": "Subscriber",
        "uuid": "68223118-109f-442a-aed3-7bb3e1eab687",
      },
    ],
  },
  "startType": Object {
    "value": Object {
      "name": "Select recipients manually",
      "value": "assets",
    },
  },
  "valid": true,
}
`;

exports[`StartSessionForm updates should save changes 2`] = `
Array [
  Object {
    "contacts": Array [],
    "create_contact": false,
    "flow": Object {
      "name": "My Flow",
      "uuid": undefined,
    },
    "groups": Array [],
    "legacy_vars": Array [],
    "type": "start_session",
    "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
  },
]
`;
